--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,6 @@ jobs:
               with:
                 node-version: ${{ matrix.node-version }}
             - run: npm i
+            - run: mongod
+            - run: npm run dev
             - run: npm test
