--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,8 @@ jobs:
         steps:
             - uses: actions/checkout@v3
 
+            - name: MongoDB in GitHub Actions
+              uses: supercharge/mongodb-github-action@1.10.0
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v3
               with:
