--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,7 @@ jobs:
               with:
                 node-version: ${{ matrix.node-version }}
             - run: npm i
+            - run: npm i mongodb
             - run: mongod
             - run: npm run dev
             - run: npm test
