--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,6 +33,6 @@ jobs:
                 node-version: ${{ matrix.node-version }}
             - run: npm i
             - run: npm i mongodb
-            - run: mongod
+            - run: npm mongod
             - run: npm run dev
             - run: npm test
