--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,12 +27,15 @@ jobs:
 
             - name: MongoDB in GitHub Actions
               uses: supercharge/mongodb-github-action@1.10.0
+            - run: npm i mongodb
+            - run: mkdir db
+            - run: mongod --dbpath=/db
+
+            
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v3
               with:
                 node-version: ${{ matrix.node-version }}
             - run: npm i
-            - run: npm i mongodb
-            - run: npm mongod
             - run: npm run dev
             - run: npm test
