--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,17 +21,15 @@ jobs:
         strategy:
             matrix:
                 node-version: [20.x]
+                mongodb-version: ['4.2', '4.4', '5.0', '6.0', '7.0']
 
         steps:
             - uses: actions/checkout@v3
 
             - name: MongoDB in GitHub Actions
               uses: supercharge/mongodb-github-action@1.10.0
-            - run: npm init -y
-            - run: npm i mongodb
-            - run: npm help
-            - run: mkdir db
-            - run: mongod
+              with:
+                mongodb-version: ${{ matrix.mongodb-version }}
 
 
             - name: Use Node.js ${{ matrix.node-version }}
