--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,5 +37,6 @@ jobs:
               with:
                 node-version: ${{ matrix.node-version }}
             - run: npm i
-            - run: npm run dev
+            - run: npm run dev &
+            - run: sleep 10 #Wait for server to start
             - run: npm test
