--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
         strategy:
             matrix:
                 node-version: [20.x]
-                mongodb-version: ['4.2', '4.4', '5.0', '6.0', '7.0']
+                mongodb-version: ['7.0']
 
         steps:
             - uses: actions/checkout@v3
